fix: make changes after text overflow check

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -145,7 +145,7 @@
 
 .about__details {
   @media (max-width: $mobile-width-max) {
-    padding: 16px 20px;
+    padding: 15px 20px;
     width: 223px;
   }
 
