--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -267,7 +267,7 @@
   top: auto;
 
   @media (max-width: $mobile-width-max) {
-    bottom: 338px;
+    bottom: 339px;
     left: 15px;
   }
 
