--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -238,7 +238,7 @@
 
   box-decoration-break: clone;
   filter: url(#gooey-filter);
-  overflow: scroll;
+  overflow-y: scroll;
   overflow-x: hidden;
   z-index: 3;
 
