--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -62,6 +62,9 @@
 }
 
 .reviews__slide.swiper-slide {
+  overflow-y: scroll;
+    overflow-x: hidden;
+
   @media (max-width: $mobile-width-max) {
     height: 472px;
   }
@@ -78,6 +81,8 @@
 .reviews__slide-content-wrapper {
   border: 2px solid $accent-color;
   border-radius: 16px;
+  overflow-x: hidden;
+  overflow-y: scroll;
 
   @media (max-width: $mobile-width-max) {
     @include flex(row, space-between, center);
